# ShowYourHeart

./: .editorconfig  .gitignore  README.md  package-lock.json  pyproject.toml  tailwind.config.js
.github/workflows/: lint.yml
docker/: .env.example  Dockerfile  docker-compose.yml
src/apps/demo/: forms.py
src/apps/demo/migrations/: 0001_initial.py
src/apps/demo/tests/: test_forms.py
src/apps/users/: admin.py  forms.py  services.py  signals.py  views.py
src/apps/users/management/commands/: auto_superuser.py  load_dev_data.py  loaddevdata.py
src/apps/users/migrations/: 0001_initial.py  0002_data_superuser.py  0003_data_emails.py
src/assets/js/: scripts.js
src/assets/styles/: output.css
src/project/: admin.py  settings.py  test_selenium.py  urls.py  wsgi.py
src/project/admin/: __init__.py  logentry.py
src/project/management/commands/: loaddevdata.py
src/project/migrations/: 0001_initial.py
src/project/tests/: test_selenium.py
src/templates/: base.html
